vlib/v/checker/tests/map_index_reference_value.vv
struct Foo {
	bar string
}

fn main() {
	mut m := map[string]&Foo{}
	m['bar'].bar = 'bar'
	// m['bar'] << 'baz' // etc
}
